--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "eruda": "^2.8.3",
+    "eruda-dom": "^2.0.0",
+    "eruda-timing": "^2.0.1",
+    "less": "^4.1.3",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -18,6 +23,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -25,11 +31,13 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "naive-ui": "2.33.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
+    "vfonts": "^0.0.3",
     "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12",
-    "vite-plugin-pwa": "^0.14.0"
+    "vite-plugin-pwa": "^0.14.0",
+    "vue-tsc": "^1.0.12"
   }
 }
