--- a/package.json
+++ b/package.json
@@ -1,7 +1,34 @@
 {
   "name": "vue3-next",
-  "version": "0.0.0",
+  "version": "3.0.0",
   "private": true,
+  "license": "Apache",
+  "homepage": ".",
+  "author": {
+    "name": "Zero",
+    "email": "1203970284@qq.com",
+    "url": "http://github.com/groupguanfang"
+  },
+  "maintainers": [],
+  "description": "心电社区前端项目NEXT",
+  "keywords": [
+    "LightningLion",
+    "vue",
+    "vuejs"
+  ],
+  "main": "main.ts",
+  "bugs": {
+    "url": "https://github.com/groupguanfang/Vue3-next",
+    "email": "1203970284@qq.com"
+  },
+  "config": {
+    "port": "5173"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/groupguanfang/Vue3-next",
+    "directory": "心电社区前端项目NEXT"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
