--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "clipboard-copy": "^4.0.1",
     "eruda": "^2.8.3",
     "eruda-dom": "^2.0.0",
     "eruda-timing": "^2.0.1",
     "less": "^4.1.3",
+    "md-editor-v3": "^2.6.0",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
