--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "less": "^4.1.3",
     "md-editor-v3": "^2.6.0",
     "pinia": "^2.0.28",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
